--- a/nginx.rails.conf
+++ b/nginx.rails.conf
@@ -1,3 +1,4 @@
+# api server
 upstream app_server {
   # for UNIX domain socket setups
   # 上記で設定したpuma.sockファイルの絶対パスを指定する
@@ -5,24 +6,34 @@ upstream app_server {
 }
 
 server {
-  #ポート80番を許可する
+  # ポート80番を許可する
   listen 80;
-  #ホスト名を指定する
+  # ホスト名を指定する
   server_name my-chat.sandbox.com;
-  #静的ファイルのパスをドキュメントルートに設定する
-  root /home/chat-rails/public;
-  # ドキュメントルート配下を以下の順番で検索する
-  try_files $uri/index.html $uri.html $uri @app;
-  # @appの場合は、以下の設定を読み込ませる
-  location @app {
+
+  # rails-api設定
+  location /api/ {
+    root /home/chat-rails/public;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
     proxy_pass http://app_server; #upstreamで指定した名前で設定する
   }
-  # エラーページの参照先を設定する
-  error_page 500 502 503 504 /500.html;
-  location = /500.html {
-    root /home/chat-rails/public;
+
+  # next(html export)設定
+  location / {
+    root /home/chat-next/out;
   }
+
+  # 404 not found
+  error_page 404 /404.html;
+    location = /400.html {
+    root /home/chat-next/out;
+  }
+
+  # エラーページの参照先を設定する(未設定、のちのち考える)
+  # error_page 500 502 503 504 /500.html;
+  # location = /500.html {
+  #  root /home/chat-rails/public;
+  # }
 }
