Apply HTTP secure / update readme

--- a/nginx.rails.conf
+++ b/nginx.rails.conf
@@ -8,8 +8,14 @@ upstream app_server {
 server {
   # ポート80番を許可する
   listen 80;
+  # 443番ポートを許可し、SSL機能をON
+  listen 443 ssl;
   # ホスト名を指定する
   server_name my-chat.sandbox.com;
+
+  # 証明書を設定
+  ssl_certificate     /etc/nginx/ssl/server.crt;
+  ssl_certificate_key /etc/nginx/ssl/server.key;
 
   # rails-api設定
   location /api/ {
